[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/NokiaCellphone.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/NokiaCellphone.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Tiles/AltGround/Grass.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tiles/Solids/RegSolid.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tiles/Ground/Grass.png" type="Texture" id=6]
[ext_resource path="res://Player/camera.gd" type="Script" id=7]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Space/SpaceTile.png" type="Texture" id=9]
[ext_resource path="res://Player/Ship.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Landscape" type="YSort" parent="."]

[node name="TextureRect" type="TextureRect" parent="Landscape"]
margin_left = -7.7027
margin_top = -5.76215
margin_right = 315.297
margin_bottom = 311.238
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AltGround" parent="Landscape" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 262146, 0, 0, 262147, 0, 1, 262148, 0, 1, 262149, 0, 2, 262155, 0, 0, 262156, 0, 1, 262157, 0, 1, 262158, 0, 1, 262159, 0, 1, 262160, 0, 2, 327681, 0, 0, 327682, 0, 131078, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 131077, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 1, 327691, 0, 131078, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65538, 393217, 0, 65536, 393218, 0, 65541, 393219, 0, 131073, 393220, 0, 131073, 393221, 0, 131073, 393222, 0, 65542, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65541, 393228, 0, 131073, 393229, 0, 131073, 393230, 0, 65542, 393231, 0, 65537, 393232, 0, 65538, 458753, 0, 65540, 458754, 0, 131074, 458758, 0, 131072, 458759, 0, 65542, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65541, 458763, 0, 131074, 458766, 0, 131072, 458767, 0, 131073, 458768, 0, 131074, 524289, 0, 131075, 524295, 0, 131072, 524296, 0, 65544, 524297, 0, 131073, 524298, 0, 131074, 589832, 0, 131075, 655360, 0, 0, 655361, 0, 2, 720896, 0, 65536, 720897, 0, 65538, 786432, 0, 65536, 786433, 0, 131077, 786434, 0, 2, 786444, 0, 0, 786445, 0, 2, 851968, 0, 131072, 851969, 0, 65542, 851970, 0, 131077, 851971, 0, 1, 851972, 0, 2, 851980, 0, 65536, 851981, 0, 131077, 851982, 0, 1, 851983, 0, 2, 917505, 0, 65536, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65538, 917516, 0, 131072, 917517, 0, 65542, 917518, 0, 65537, 917519, 0, 65538, 983041, 0, 131072, 983042, 0, 131073, 983043, 0, 65542, 983044, 0, 131077, 983045, 0, 2, 983053, 0, 131072, 983054, 0, 65542, 983055, 0, 65538, 1048579, 0, 131072, 1048580, 0, 65542, 1048581, 0, 65538, 1048590, 0, 131072, 1048591, 0, 131074, 1114116, 0, 131072, 1114117, 0, 131074 )

[node name="Shadows" parent="Landscape" instance=ExtResource( 5 )]
modulate = Color( 0, 0, 0, 0.498039 )
position = Vector2( 0, 16 )
collision_layer = 0
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 1, -65518, 0, 1, -65517, 0, 2, 65535, 0, 65536, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65538, 131071, 0, 65536, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65538, 196607, 0, 65536, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65538, 262143, 0, 65536, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65538, 327679, 0, 65536, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65541, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 65542, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65541, 262156, 0, 131073, 262157, 0, 131073, 262158, 0, 131073, 262159, 0, 131073, 262160, 0, 65542, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65538, 393215, 0, 65536, 327680, 0, 65537, 327681, 0, 65541, 327682, 0, 131074, 327686, 0, 131072, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131073, 327691, 0, 131074, 327696, 0, 131072, 327697, 0, 65542, 327698, 0, 65537, 327699, 0, 65538, 458751, 0, 65536, 393216, 0, 65537, 393217, 0, 65538, 393233, 0, 65536, 393234, 0, 65537, 393235, 0, 65538, 524287, 0, 65536, 458752, 0, 65537, 458753, 0, 65538, 458769, 0, 65536, 458770, 0, 65537, 458771, 0, 65538, 589823, 0, 65536, 524288, 0, 65541, 524289, 0, 131074, 524305, 0, 131072, 524306, 0, 65542, 524307, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589842, 0, 65536, 589843, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655378, 0, 65536, 655379, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720914, 0, 65536, 720915, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786450, 0, 65536, 786451, 0, 65538, 917503, 0, 65536, 851968, 0, 65538, 851986, 0, 65536, 851987, 0, 65538, 983039, 0, 65536, 917504, 0, 131077, 917505, 0, 2, 917522, 0, 65536, 917523, 0, 65538, 1048575, 0, 65536, 983040, 0, 65537, 983041, 0, 65538, 983058, 0, 65536, 983059, 0, 65538, 1114111, 0, 65536, 1048576, 0, 65537, 1048577, 0, 131077, 1048578, 0, 2, 1048593, 0, 0, 1048594, 0, 131078, 1048595, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 131077, 1114115, 0, 1, 1114116, 0, 1, 1114117, 0, 2, 1114126, 0, 0, 1114127, 0, 1, 1114128, 0, 1, 1114129, 0, 131078, 1114130, 0, 65537, 1114131, 0, 65538, 1245183, 0, 65536, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 131077, 1179654, 0, 1, 1179655, 0, 1, 1179656, 0, 2, 1179660, 0, 0, 1179661, 0, 1, 1179662, 0, 131078, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65538, 1310719, 0, 131072, 1245184, 0, 131073, 1245185, 0, 131073, 1245186, 0, 131073, 1245187, 0, 131073, 1245188, 0, 131073, 1245189, 0, 131073, 1245190, 0, 131073, 1245191, 0, 131073, 1245192, 0, 131074, 1245196, 0, 131072, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131074 )

[node name="Solids" parent="Landscape" instance=ExtResource( 5 )]
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 1, -65518, 0, 1, -65517, 0, 2, 65535, 0, 65536, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65538, 131071, 0, 65536, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65538, 196607, 0, 65536, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65538, 262143, 0, 65536, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65538, 327679, 0, 65536, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65541, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 65542, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65541, 262156, 0, 131073, 262157, 0, 131073, 262158, 0, 131073, 262159, 0, 131073, 262160, 0, 65542, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65538, 393215, 0, 65536, 327680, 0, 65537, 327681, 0, 65541, 327682, 0, 131074, 327686, 0, 131072, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131073, 327691, 0, 131074, 327696, 0, 131072, 327697, 0, 65542, 327698, 0, 65537, 327699, 0, 65538, 458751, 0, 65536, 393216, 0, 65537, 393217, 0, 65538, 393233, 0, 65536, 393234, 0, 65537, 393235, 0, 65538, 524287, 0, 65536, 458752, 0, 65537, 458753, 0, 65538, 458769, 0, 65536, 458770, 0, 65537, 458771, 0, 65538, 589823, 0, 65536, 524288, 0, 65541, 524289, 0, 131074, 524305, 0, 131072, 524306, 0, 65542, 524307, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589842, 0, 65536, 589843, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655378, 0, 65536, 655379, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720914, 0, 65536, 720915, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786450, 0, 65536, 786451, 0, 65538, 917503, 0, 65536, 851968, 0, 131077, 851969, 0, 2, 851986, 0, 65536, 851987, 0, 65538, 983039, 0, 65536, 917504, 0, 65537, 917505, 0, 65538, 917522, 0, 65536, 917523, 0, 65538, 1048575, 0, 65536, 983040, 0, 65537, 983041, 0, 131077, 983042, 0, 1, 983043, 0, 2, 983058, 0, 65536, 983059, 0, 65538, 1114111, 0, 65536, 1048576, 0, 65537, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 131077, 1048580, 0, 1, 1048581, 0, 2, 1048593, 0, 0, 1048594, 0, 131078, 1048595, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 131077, 1114118, 0, 2, 1114126, 0, 0, 1114127, 0, 1, 1114128, 0, 1, 1114129, 0, 131078, 1114130, 0, 65537, 1114131, 0, 65538, 1245183, 0, 65536, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 131077, 1179655, 0, 1, 1179656, 0, 2, 1179660, 0, 0, 1179661, 0, 1, 1179662, 0, 131078, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65538, 1310719, 0, 131072, 1245184, 0, 131073, 1245185, 0, 131073, 1245186, 0, 131073, 1245187, 0, 131073, 1245188, 0, 131073, 1245189, 0, 131073, 1245190, 0, 131073, 1245191, 0, 131073, 1245192, 0, 131074, 1245196, 0, 131072, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131074 )

[node name="Camera" type="Camera2D" parent="Landscape"]
position = Vector2( 150, 150 )
script = ExtResource( 7 )

[node name="Atmosphere" type="CanvasModulate" parent="Landscape"]
color = Color( 0.745098, 0.858824, 0.968627, 1 )

[node name="Player" parent="Landscape" instance=ExtResource( 8 )]
position = Vector2( 148.492, 174.484 )

[node name="Camera" parent="Landscape/Player" index="2"]
current = false

[node name="Space" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="Space"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" parent="Space" instance=ExtResource( 10 )]
position = Vector2( 145.676, 126.606 )

[node name="Camera2D" parent="Space/Ship" index="2"]
current = false

[node name="PlanetFinderPanel" parent="Space/Ship/CanvasLayer" index="0"]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Title" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Title"]
margin_right = 300.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Astronaut Game"
align = 1
valign = 2

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 87.0
margin_bottom = 300.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 224.0
margin_right = 87.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Play"
flat = true
align = 0

[node name="Feedback" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 244.0
margin_right = 87.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Feedback"
flat = true
align = 0

[node name="Options" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 264.0
margin_right = 87.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
disabled = true
text = "Options"
flat = true
align = 0

[node name="Quit" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 284.0
margin_right = 87.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Quit to Desktop"
flat = true
align = 0

[connection signal="pressed" from="CanvasLayer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Feedback" to="." method="_on_Feedback_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Quit" to="." method="_on_Quit_pressed"]

[editable path="Landscape/Player"]
[editable path="Landscape/Player/Hurtbox"]
[editable path="Landscape/Player/SoftCollision"]
[editable path="Space/Ship"]
